--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "Simply generate a centered image from text.",
   "main": "index.js",
-  "keywords": [],
+  "keywords": [
+    "picture",
+    "image",
+    "png",
+    "jpg",
+    "bmp",
+    "text"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/steebchen/text-to-picture.git"
@@ -11,12 +18,17 @@
   "bugs": {
     "url": "https://github.com/steebchen/text-to-picture/issues"
   },
-  "author": "",
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "author": "Luca Steeb",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^4.5.0",
-    "eslint-config-ultra": "^0.4.5",
     "jimp": "https://github.com/steebchen/jimp",
     "smart-promisify": "^1.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.5.0",
+    "eslint-config-ultra": "^0.4.5"
   }
 }
