--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "author": "Luca Steeb",
   "license": "MIT",
   "dependencies": {
-    "jimp": "https://github.com/steebchen/jimp",
-    "smart-promisify": "^1.0.2"
+    "jimp": "^0.6.4",
+    "smart-promisify": "^1.0.5"
   },
   "devDependencies": {
     "eslint": "^4.5.0",
